--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -201,6 +201,23 @@
                       <span class="font-medium text-slate-200">API key</span>
                       <input id="settings-jellyfin-api-key" type="text" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 placeholder-slate-500 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="Enter Jellyfin API key" />
                     </label>
+                    <div class="grid gap-4 sm:grid-cols-[1fr_auto] items-end">
+                      <label class="flex flex-col gap-1 text-sm">
+                        <span class="font-medium text-slate-200">Library ID</span>
+                        <input id="settings-jellyfin-library-id" type="text" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 placeholder-slate-500 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="Select or paste Jellyfin library ID" />
+                      </label>
+                      <button id="jellyfin-libraries-refresh" type="button" class="h-[42px] rounded-lg border border-slate-700/60 bg-slate-900/60 px-3 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">Fetch libraries</button>
+                    </div>
+                    <div id="jellyfin-libraries-wrapper" class="hidden space-y-2 rounded-lg border border-slate-800/60 bg-slate-950/40 p-3">
+                      <div class="flex items-center justify-between">
+                        <span class="text-xs font-semibold uppercase tracking-wide text-slate-400">Available libraries</span>
+                        <button type="button" id="jellyfin-libraries-hide" class="text-[10px] font-medium uppercase tracking-wide text-slate-400 hover:text-slate-200">Hide</button>
+                      </div>
+                      <div id="jellyfin-libraries-loading" class="hidden text-xs text-brand-300">Loading Jellyfin libraries…</div>
+                      <div id="jellyfin-libraries-error" class="hidden rounded border border-rose-500/40 bg-rose-500/10 p-2 text-[11px] text-rose-200"></div>
+                      <select id="jellyfin-libraries-select" size="5" class="w-full rounded-md border border-slate-700/70 bg-slate-950/60 p-2 text-sm text-slate-100"></select>
+                      <p class="text-[11px] text-slate-500">Select a library to set its ID. Only that library will be refreshed on new or deleted media.</p>
+                    </div>
                   </fieldset>
 
                   <div class="flex justify-end">
