--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -296,6 +296,16 @@
               <div id="storage-error" class="hidden rounded-lg border border-rose-500/40 bg-rose-500/10 p-3 text-sm text-rose-200"></div>
               <div id="storage-mounts" class="space-y-4"></div>
             </section>
+            <section class="rounded-2xl border border-slate-800/70 bg-slate-900/60 p-6 shadow">
+              <div class="mb-4 flex items-center justify-between">
+                <h3 class="text-lg font-semibold text-slate-100">Queue Stats</h3>
+                <button id="stats-refresh-btn" type="button" class="rounded-full border border-slate-800/60 bg-slate-950/60 px-3 py-1 text-xs font-medium text-slate-300 transition hover:border-brand-400/60 hover:text-brand-200">Refresh</button>
+              </div>
+              <div id="stats-loading" class="hidden text-sm text-brand-300">Computing stats…</div>
+              <div id="stats-error" class="hidden rounded-lg border border-rose-500/40 bg-rose-500/10 p-3 text-sm text-rose-200"></div>
+              <div id="stats-content" class="space-y-4"></div>
+              <div id="stats-meta" class="mt-4 text-[10px] uppercase tracking-wide text-slate-500"></div>
+            </section>
           </aside>
         </div>
       </section>
