--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -176,6 +176,10 @@
                         <span class="font-medium text-slate-200">Minimum free space (GB)</span>
                         <input id="settings-min-free-space" type="number" min="0" step="0.1" required class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="5" />
                       </label>
+                      <label class="flex flex-col gap-1 text-sm">
+                        <span class="font-medium text-slate-200">Default search limit</span>
+                        <input id="settings-default-search-limit" type="number" min="1" max="100" required class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="50" />
+                      </label>
                     </div>
                   </fieldset>
 
