feat: Implement duplicate download warning by adding search fragment matching functionality

--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -96,6 +96,7 @@
                     <button id="queue-selection-btn" type="button" class="hidden rounded-lg bg-emerald-500 px-4 py-2 text-sm font-semibold text-white shadow transition hover:bg-emerald-400 focus:outline-none focus:ring focus:ring-emerald-500/40">Add selected to queue</button>
                   </div>
                   <div id="search-meta" class="mb-4 text-sm text-slate-400"></div>
+                  <div id="search-warnings" class="hidden mb-4 rounded-lg border border-amber-500/40 bg-amber-500/10 px-4 py-3 text-sm text-amber-200"></div>
                   <ul id="search-results" class="flex flex-col gap-3"></ul>
                   <div id="search-empty" class="hidden text-sm text-slate-500">Search for something to see results here.</div>
                   <div id="search-loading" class="hidden text-sm text-brand-300">Searching providers…</div>
