--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -117,8 +117,10 @@
                     <button id="kraska-home-btn" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">Home</button>
                     <button id="kraska-back-btn" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200 disabled:opacity-40" disabled>Back</button>
                     <button id="kraska-queue-btn" type="button" class="hidden rounded-lg bg-emerald-500 px-4 py-2 text-xs font-semibold text-white shadow transition hover:bg-emerald-400 focus:outline-none focus:ring focus:ring-emerald-500/40">Add selected to queue</button>
+                    <button id="kraska-refresh-btn" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">Refresh from source</button>
                   </div>
                 </div>
+                <div id="kraska-cache-meta" class="hidden rounded-full border border-slate-800/60 bg-slate-900/60 px-3 py-1 text-xs text-slate-300"></div>
                 <div id="kraska-breadcrumbs" class="mb-3 flex flex-wrap items-center gap-2 text-sm text-slate-400"></div>
                 <div id="kraska-error" class="hidden mb-3 rounded-lg border border-rose-500/40 bg-rose-500/10 p-3 text-sm text-rose-200"></div>
                 <div id="kraska-loading" class="hidden text-sm text-brand-300">Loading menu…</div>
