--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -209,6 +209,15 @@
                   </fieldset>
 
                   <fieldset class="grid gap-4 rounded-2xl border border-slate-800/60 bg-slate-900/50 p-5">
+                    <legend class="px-2 text-sm font-semibold uppercase tracking-wide text-slate-400">Providers</legend>
+                    <label class="flex flex-col gap-1 text-sm">
+                      <span class="font-medium text-slate-200">Kra.sk menu cache (days)</span>
+                      <input id="settings-kraska-menu-cache-ttl" type="number" min="0" step="0.1" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="7" />
+                      <span class="text-[11px] text-slate-500">Set to 0 to disable caching for the Kra.sk menu.</span>
+                    </label>
+                  </fieldset>
+
+                  <fieldset class="grid gap-4 rounded-2xl border border-slate-800/60 bg-slate-900/50 p-5">
                     <legend class="px-2 text-sm font-semibold uppercase tracking-wide text-slate-400">Paths</legend>
                     <label class="flex flex-col gap-1 text-sm">
                       <span class="font-medium text-slate-200">Downloads directory</span>
