--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -27,11 +27,16 @@
       };
     </script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-  <link rel="stylesheet" href="/ui/styles.css" />
-  <script type="module" src="/ui/app.js" defer></script>
+  <link rel="stylesheet" href="/ui/styles.css?v=__APP_ASSET_VERSION__" />
+  <script>window.APP_BUILD_VERSION = '__APP_ASSET_VERSION__';</script>
+  <script type="module" src="/ui/app.js?v=__APP_ASSET_VERSION__" defer></script>
   </head>
   <body class="h-full bg-slate-950 text-slate-100">
     <div id="app" class="mx-auto flex min-h-screen w-full max-w-7xl flex-col px-4 pb-16 pt-8 sm:px-8">
+      <div id="asset-version-banner" class="hidden mb-4 items-center justify-between rounded-2xl border border-amber-500/40 bg-amber-500/15 px-4 py-3 text-sm text-amber-100">
+        <span data-version-message>New interface update available.</span>
+        <button id="asset-version-reload" type="button" class="rounded-lg border border-amber-300/60 bg-amber-400/20 px-3 py-1 text-xs font-semibold text-amber-50 transition hover:border-amber-200/70 hover:bg-amber-300/30">Reload now</button>
+      </div>
       <header class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between">
         <div>
           <h1 class="text-3xl font-semibold tracking-tight">JF Fetch</h1>
