--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -123,6 +123,10 @@
                     <button id="kraska-back-btn" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200 disabled:opacity-40" disabled>Back</button>
                     <button id="kraska-queue-btn" type="button" class="hidden rounded-lg bg-emerald-500 px-4 py-2 text-xs font-semibold text-white shadow transition hover:bg-emerald-400 focus:outline-none focus:ring focus:ring-emerald-500/40">Add selected to queue</button>
                     <button id="kraska-refresh-btn" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">Refresh from source</button>
+                    <label class="inline-flex items-center gap-2 rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">
+                      <input id="kraska-select-all" type="checkbox" class="h-4 w-4 rounded border-slate-600 bg-slate-800 text-brand-500 focus:ring-brand-500/60" />
+                      Select all on this level
+                    </label>
                   </div>
                 </div>
                 <div id="kraska-cache-meta" class="hidden rounded-full border border-slate-800/60 bg-slate-900/60 px-3 py-1 text-xs text-slate-300"></div>
@@ -142,9 +146,10 @@
                     <p class="text-sm text-slate-400">Monitor progress, pause/resume, cancel, and reorder downloads.</p>
                   </div>
                   <div class="flex flex-col gap-2 sm:flex-row sm:items-center">
-                    <div class="flex items-center gap-2">
+                    <div class="flex flex-wrap items-center gap-2">
                       <button id="retry-failed-4h-btn" type="button" class="rounded-lg border border-amber-600/60 bg-amber-500/10 px-3 py-1.5 text-xs font-semibold text-amber-300 transition hover:border-amber-500/80 hover:bg-amber-500/20 focus:outline-none focus:ring focus:ring-amber-500/40">Retry failed (4h)</button>
                       <button id="retry-failed-24h-btn" type="button" class="rounded-lg border border-amber-600/60 bg-amber-500/10 px-3 py-1.5 text-xs font-semibold text-amber-300 transition hover:border-amber-500/80 hover:bg-amber-500/20 focus:outline-none focus:ring focus:ring-amber-500/40">Retry failed (24h)</button>
+                      <button id="cancel-all-queued-btn" type="button" class="rounded-lg border border-rose-600/60 bg-rose-500/10 px-3 py-1.5 text-xs font-semibold text-rose-200 transition hover:border-rose-500/80 hover:bg-rose-500/20 focus:outline-none focus:ring focus:ring-rose-500/40">Cancel all queued</button>
                     </div>
                     <label class="inline-flex items-center gap-2 text-sm text-slate-300">
                       <input id="jobs-mine-toggle" type="checkbox" class="rounded border-slate-600 bg-slate-800 text-brand-500 focus:ring-brand-500/60" />
