--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -191,6 +191,60 @@
               </div>
             </section>
 
+            <section id="audit-view" data-panel="audit" class="panel hidden">
+              <div class="space-y-6">
+                <div class="rounded-2xl border border-slate-800/70 bg-slate-900/60 p-6 shadow">
+                  <div class="mb-4 flex flex-col gap-3 sm:flex-row sm:items-center sm:justify-between">
+                    <div>
+                      <h3 class="text-lg font-semibold text-slate-100">Audit Log & System Health</h3>
+                      <p class="text-sm text-slate-400">Review recent actions, check aria2 status, and inspect daemon logs.</p>
+                    </div>
+                    <div class="flex flex-wrap items-center gap-2">
+                      <button id="audit-refresh-btn" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">Refresh audit</button>
+                      <button id="audit-load-more" type="button" class="rounded-lg border border-slate-700/60 bg-slate-950/60 px-3 py-1.5 text-xs font-semibold text-slate-200 transition hover:border-brand-400/60 hover:text-brand-200">Load older</button>
+                      <button id="aria2-health-btn" type="button" class="rounded-lg border border-emerald-600/60 bg-emerald-500/10 px-3 py-1.5 text-xs font-semibold text-emerald-300 transition hover:border-emerald-500/80 hover:bg-emerald-500/20 focus:outline-none focus:ring focus:ring-emerald-500/40">Check aria2</button>
+                      <button id="logs-refresh-btn" type="button" class="rounded-lg border border-indigo-600/60 bg-indigo-500/10 px-3 py-1.5 text-xs font-semibold text-indigo-300 transition hover:border-indigo-500/80 hover:bg-indigo-500/20 focus:outline-none focus:ring focus:ring-indigo-500/40">Refresh logs</button>
+                    </div>
+                  </div>
+                  <div id="aria2-health" class="mb-4 hidden rounded-lg border border-slate-700/60 bg-slate-950/60 p-4 text-xs"></div>
+                  <div id="logs-wrapper" class="mb-4 hidden">
+                    <div class="mb-2 flex flex-wrap items-center gap-2">
+                      <label class="text-xs font-medium text-slate-300">Log file:</label>
+                      <select id="logs-select" class="rounded border border-slate-700 bg-slate-950 px-2 py-1 text-xs text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40"></select>
+                      <label class="flex items-center gap-1 text-xs text-slate-300">
+                        <span>Lines:</span>
+                        <input id="logs-lines" type="number" min="10" max="500" value="120" class="w-20 rounded border border-slate-700 bg-slate-950 px-2 py-1 text-xs text-slate-100" />
+                      </label>
+                      <label class="inline-flex items-center gap-1 text-xs text-slate-300">
+                        <input id="logs-auto-refresh" type="checkbox" class="h-4 w-4 rounded border-slate-600 bg-slate-800 text-brand-500 focus:ring-brand-500/60" />
+                        Auto-refresh (10s)
+                      </label>
+                    </div>
+                    <div id="logs-error" class="hidden mb-2 rounded border border-rose-500/40 bg-rose-500/10 px-3 py-2 text-xs text-rose-200"></div>
+                    <pre id="logs-content" class="h-64 overflow-auto rounded-lg border border-slate-800/70 bg-slate-950/80 p-3 text-[11px] leading-tight text-slate-200"></pre>
+                  </div>
+                  <div id="audit-loading" class="hidden text-sm text-brand-300">Loading audit log…</div>
+                  <div id="audit-error" class="hidden rounded-xl border border-rose-500/40 bg-rose-500/10 p-4 text-sm text-rose-200"></div>
+                  <div id="audit-empty" class="hidden rounded-xl border border-dashed border-slate-700/60 p-8 text-center text-sm text-slate-400">No audit entries yet.</div>
+                  <div class="overflow-x-auto rounded-xl border border-slate-800/60">
+                    <table class="min-w-full divide-y divide-slate-800/70 text-left text-xs">
+                      <thead>
+                        <tr class="divide-x divide-slate-800/70 bg-slate-950/40 text-[11px] uppercase tracking-wide text-slate-400">
+                          <th class="px-3 py-2">Time (relative)</th>
+                          <th class="px-3 py-2">Timestamp</th>
+                          <th class="px-3 py-2">User</th>
+                          <th class="px-3 py-2">Action</th>
+                          <th class="px-3 py-2">Subject</th>
+                          <th class="px-3 py-2">Payload</th>
+                        </tr>
+                      </thead>
+                      <tbody id="audit-table" class="divide-y divide-slate-800/70"></tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </section>
+
             <section id="settings-view" data-panel="settings" class="panel hidden">
               <div class="rounded-2xl border border-slate-800/70 bg-slate-900/60 p-6 shadow">
                 <div class="mb-4 flex flex-col gap-2 sm:flex-row sm:items-center sm:justify-between">
