--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -37,6 +37,7 @@
         <span data-version-message>New interface update available.</span>
         <button id="asset-version-reload" type="button" class="rounded-lg border border-amber-300/60 bg-amber-400/20 px-3 py-1 text-xs font-semibold text-amber-50 transition hover:border-amber-200/70 hover:bg-amber-300/30">Reload now</button>
       </div>
+      <div id="global-warning-banner" class="hidden mb-4 flex flex-col gap-3 rounded-2xl border border-amber-500/40 bg-amber-500/15 px-4 py-3 text-sm text-amber-100"></div>
       <header class="flex flex-col gap-4 sm:flex-row sm:items-center sm:justify-between">
         <div>
           <h1 class="text-3xl font-semibold tracking-tight">JF Fetch</h1>
@@ -284,6 +285,11 @@
                       <span class="font-medium text-slate-200">Kra.sk menu cache (days)</span>
                       <input id="settings-kraska-menu-cache-ttl" type="number" min="0" step="0.1" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="7" />
                       <span class="text-[11px] text-slate-500">Set to 0 to disable caching for the Kra.sk menu.</span>
+                    </label>
+                    <label class="flex flex-col gap-1 text-sm">
+                      <span class="font-medium text-slate-200">Kra.sk failure backoff (minutes)</span>
+                      <input id="settings-kraska-backoff-minutes" type="number" min="1" step="0.5" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="5" />
+                      <span class="text-[11px] text-slate-500">Pause Kra.sk jobs for this long after an invalid ident error. Defaults to 5 minutes.</span>
                     </label>
                     <label class="flex items-center gap-3 text-sm">
                       <input id="settings-kraska-debug-enabled" type="checkbox" class="rounded border-slate-600 bg-slate-800 text-brand-500 focus:ring-brand-500/60" />
