--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -332,6 +332,11 @@
                       <input id="settings-kraska-backoff-minutes" type="number" min="1" step="0.5" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="5" />
                       <span class="text-[11px] text-slate-500">Pause Kra.sk jobs for this long after an invalid ident error. Defaults to 5 minutes.</span>
                     </label>
+                    <label class="flex flex-col gap-1 text-sm">
+                      <span class="font-medium text-slate-200">KraSk2 download spacing (seconds)</span>
+                      <input id="settings-krask2-spacing-seconds" type="number" min="0" step="1" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="120" />
+                      <span class="text-[11px] text-slate-500">Minimum delay between KraSk2 downloads to avoid rate limits. Set to 0 to disable spacing.</span>
+                    </label>
                     <label class="flex items-center gap-3 text-sm">
                       <input id="settings-kraska-debug-enabled" type="checkbox" class="rounded border-slate-600 bg-slate-800 text-brand-500 focus:ring-brand-500/60" />
                       <div class="flex flex-col gap-1">
