--- a/public/ui/index.html
+++ b/public/ui/index.html
@@ -318,6 +318,11 @@
                         <input id="settings-default-search-limit" type="number" min="1" max="100" required class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="50" />
                       </label>
                     </div>
+                    <label class="flex flex-col gap-1 text-sm">
+                      <span class="font-medium text-slate-200">aria2 max download speed (MB/s)</span>
+                      <input id="settings-aria2-max-speed" type="number" min="0" step="0.1" class="rounded-lg border border-slate-800 bg-slate-950/70 px-3 py-2 text-base text-slate-100 focus:border-brand-400 focus:outline-none focus:ring focus:ring-brand-500/40" placeholder="0" />
+                      <span class="text-[11px] text-slate-500">Sets a per-download speed cap passed to aria2. Enter 0 (default) to run uncapped.</span>
+                    </label>
                   </fieldset>
 
                   <fieldset class="grid gap-4 rounded-2xl border border-slate-800/60 bg-slate-900/50 p-5">
